--- a/src/app/src/main/res/layout/fragment_all_events.xml
+++ b/src/app/src/main/res/layout/fragment_all_events.xml
@@ -6,10 +6,45 @@
     android:layout_height="match_parent"
     tools:context=".admin.allevents.AllEventsFragment">
 
+    <ImageView
+        android:id="@+id/all_search_event_icon"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        android:src="@drawable/baseline_search_24"
+        android:contentDescription="icon"
+        tools:ignore="HardcodedText" />
+
+    <EditText
+        android:id="@+id/all_event_search_bar"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:hint="Name of the event"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toEndOf="@id/all_search_event_icon"
+        app:layout_constraintEnd_toStartOf="@id/all_event_search_button"
+        android:layout_marginTop="5dp"
+        tools:ignore="HardcodedText"
+        android:inputType="text" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/all_event_search_button"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginBottom="0dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginStart="10dp"
+        android:text="Search"
+        tools:ignore="HardcodedText"/>
+
     <ListView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:id="@+id/all_event_listview"
-        app:layout_constraintTop_toTopOf="parent"/>
+        app:layout_constraintTop_toBottomOf="@id/all_event_search_bar"
+        app:layout_constraintBottom_toBottomOf="parent"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
