--- a/src/app/src/main/res/layout/fragment_view_event.xml
+++ b/src/app/src/main/res/layout/fragment_view_event.xml
@@ -10,12 +10,13 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:gravity="top"
         android:orientation="vertical">
 
         <ImageView
             android:id="@+id/view_event_poster"
             android:layout_width="match_parent"
-            android:layout_height="500dp"
+            android:layout_height="300dp"
             android:contentDescription="Avatar Placeholder"
             android:scaleType="fitCenter"
             android:layout_marginTop="20dp"
@@ -35,7 +36,6 @@
             android:id="@+id/view_event_date"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
             android:text="Date|Time"
             android:textColor="@color/pink"
             android:textSize="20sp"
