--- a/src/app/src/main/res/layout/fragment_all_profiles.xml
+++ b/src/app/src/main/res/layout/fragment_all_profiles.xml
@@ -12,12 +12,46 @@
         android:layout_height="match_parent"
         tools:context=".admin.allprofiles.AllProfilesFragment">
 
+        <ImageView
+            android:id="@+id/all_search_profile_icon"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            android:src="@drawable/baseline_search_24"
+            android:contentDescription="icon"
+            tools:ignore="HardcodedText" />
+
+        <EditText
+            android:id="@+id/all_profile_search_bar"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:hint="Name of the user"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toEndOf="@id/all_search_profile_icon"
+            app:layout_constraintEnd_toStartOf="@id/all_profile_search_button"
+            android:layout_marginTop="5dp"
+            tools:ignore="HardcodedText"
+            android:inputType="text" />
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/all_profile_search_button"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginBottom="0dp"
+            android:layout_marginEnd="10dp"
+            android:layout_marginStart="10dp"
+            android:text="Search"
+            tools:ignore="HardcodedText"/>
+
         <ListView
             android:id="@+id/admin_all_profiles_listview"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/all_profile_search_bar"
             app:layout_constraintVertical_bias="0.0"
             tools:layout_editor_absoluteX="0dp" />
 
