--- a/src/app/src/main/res/layout/fragment_profile.xml
+++ b/src/app/src/main/res/layout/fragment_profile.xml
@@ -16,7 +16,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="30sp"
-            android:text="Profile"
+            android:text=""
             android:textColor="@color/black"
             android:textSize="25sp"
             app:layout_constraintBottom_toTopOf="@id/profile_picture"
@@ -55,11 +55,12 @@
 
         <EditText
             android:id="@+id/profile_name"
-            android:layout_width="wrap_content"
+            android:layout_width="200dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="30sp"
             android:gravity="center"
             android:text="Name"
+            android:textAlignment="textStart"
             android:textColor="@color/black"
             android:textSize="20dp"
             app:layout_constraintBottom_toTopOf="@id/textView3"
@@ -84,13 +85,14 @@
 
         <EditText
             android:id="@+id/profile_email"
-            android:layout_width="wrap_content"
+            android:layout_width="300dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="30sp"
             android:gravity="center"
             android:text="Email_address"
             android:textColor="@color/black"
             android:textSize="20dp"
+            android:textAlignment="textStart"
             app:layout_constraintBottom_toTopOf="@id/textView4"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
@@ -114,13 +116,14 @@
 
         <EditText
             android:id="@+id/profile_phone_number"
-            android:layout_width="wrap_content"
+            android:layout_width="300dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="30sp"
             android:gravity="center"
             android:text="Phone_number"
             android:textColor="@color/black"
             android:textSize="20dp"
+            android:textAlignment="textStart"
             app:layout_constraintBottom_toTopOf="@id/textView5"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
@@ -144,14 +147,16 @@
 
         <EditText
             android:id="@+id/profile_homepage_link"
-            android:layout_width="wrap_content"
+            android:layout_width="300dp"
             android:layout_height="wrap_content"
+            android:layout_marginStart="30sp"
             android:text="Homepage Link"
             android:textColor="@color/teal_700"
             android:textSize="20sp"
+            android:textAlignment="textStart"
             app:layout_constraintBottom_toTopOf="@id/linearLayout"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.114"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView5" />
 
@@ -163,14 +168,12 @@
             android:orientation="horizontal"
             app:layout_constraintBottom_toTopOf="@id/profile_save_button"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.242"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/profile_homepage_link">
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="30dp"
                 android:text="Allow Geolocation?"
                 android:textColor="@color/black"
                 android:textSize="20sp"
