--- a/src/app/src/main/res/layout/fragment_edit_event.xml
+++ b/src/app/src/main/res/layout/fragment_edit_event.xml
@@ -61,13 +61,14 @@
                 android:layout_width="416dp"
                 android:layout_height="44dp"
                 android:layout_marginTop="4dp"
-                android:hint="Write descrtiption for the event"
+                android:hint="Write description for the event"
                 android:textColor="@color/black"
                 android:textSize="17dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/edit_event_title" />
+                app:layout_constraintTop_toBottomOf="@+id/edit_event_title"
+                tools:ignore="HardcodedText" />
 
             <LinearLayout
                 android:id="@+id/LinearLayout2"
