--- a/src/app/src/main/res/layout/fragment_view_event.xml
+++ b/src/app/src/main/res/layout/fragment_view_event.xml
@@ -77,18 +77,14 @@
             android:textSize="20sp"
             tools:ignore="HardcodedText" />
 
-        <!--    <fragment-->
-        <!--        android:id="@+id/view_event_map"-->
-        <!--        android:name="com.google.android.gms.maps.SupportMapFragment"-->
-        <!--        android:layout_width="match_parent"-->
-        <!--        android:layout_height="200dp"-->
-        <!--        android:layout_marginTop="12dp"-->
-        <!--        app:layout_constraintBottom_toBottomOf="parent"-->
-        <!--        app:layout_constraintEnd_toEndOf="parent"-->
-        <!--        app:layout_constraintHorizontal_bias="0.0"-->
-        <!--        app:layout_constraintStart_toStartOf="parent"-->
-        <!--        app:layout_constraintTop_toBottomOf="@+id/view_event_location_title"-->
-        <!--        app:layout_constraintVertical_bias="1.0" />-->
+        <TextView
+            android:id="@+id/view_event_location"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="Here"
+            android:textSize="18sp"
+            tools:ignore="HardcodedText" />
 
 
     </LinearLayout>
